<resources>
    <string name="app_name">Ninthcore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="notMember">Dont have account?</string>
    <string name="join">Create</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="request">Get Password</string>
    <string name="backToLogin">Back to login</string>
    <string name="request_approval">Request Approval</string>
    <string name="home">Home</string>
    <string name="type">Account Type</string>
    <string name="phone">Phone Number</string>
    <string name="title_activity_location">Map</string>
</resources>