<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment"
    android:id="@+id/login_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_person"
            app:boxBackgroundColor="@android:color/transparent"
            app:hintAnimationEnabled="false"
            app:boxStrokeColor="@android:color/transparent"
            app:hintEnabled="true"
            android:layout_marginBottom="@dimen/_16sdp"
            android:hint="@string/username"
            app:hintTextColor="@color/dark"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:id="@+id/username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_lock"
            app:boxBackgroundColor="@android:color/transparent"
            app:hintAnimationEnabled="false"
            app:boxStrokeColor="@android:color/transparent"
            app:hintEnabled="true"
            app:hintTextColor="@color/dark"
            app:errorEnabled="true"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgotPassword"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_16sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="25dp"
            android:padding="@dimen/_8sdp"
            android:textAllCaps="false"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notMember" />

            <TextView
                android:id="@+id/join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/join" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>