<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_25sdp" />


        <LinearLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Yo! Forgot your password?"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginBottom="@dimen/_24sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="@android:color/transparent"
                app:startIconDrawable="@drawable/ic_baseline_message"
                app:startIconTint="@color/colorPrimaryDark"
                app:hintEnabled="true"
                android:layout_marginBottom="@dimen/_16sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/backToLogin"
                android:padding="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_16sdp"
                android:textAllCaps="false"
                android:text="@string/request"
                android:layout_marginBottom="@dimen/_16sdp"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>